# SchoolTrad

./: .gitignore  CONTRIBUTING.md  INSTALLATION.md  LICENSE.md  README.md  __init__.py  app.py  install.bat  install.sh  requirements.txt  setup.cfg  setup.py  setup_github.bat  setup_github.sh  streamlit_app.py
.streamlit/: config.toml
config/: settings.py  styles.py
models/: __init__.py  auth.py  data.py
tests/: __init__.py  test_data.py
views/: __init__.py  admin.py  assets.py  authentication.py  details.py
