[metadata]
name = trading_dashboard_pro
version = 1.0.0
description = Une application dashboard pour gérer et suivre vos configurations de trading
long_description = file: README.md
long_description_content_type = text/markdown
author = SchoolTrad
url = https://github.com/idhaoss/SchoolTrad

[options]
packages = find:
python_requires = >=3.8
install_requires =
    streamlit>=1.28.0
    pandas>=1.5.0
    pillow>=9.0.0
    numpy>=1.21.0
    plotly>=5.13.0
    watchdog>=3.0.0

[options.packages.find]
include = trading_dashboard_pro*

[options.package_data]
trading_dashboard_pro = 
    config/*.py
    models/*.py
    views/*.py
    utils/*.py
